--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
 	"author": "Beng Hui",
 	"license": "ISC",
 	"dependencies": {
+		"db-migrate": "^0.11.13",
+		"db-migrate-mysql": "^2.2.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.1",
 		"joi": "^17.6.2",
 		"mysql2": "^2.3.3",
+		"sequelize": "^6.24.0",
 		"uuid": "^9.0.0"
 	}
 }
