--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"start": "node index.js",
 		"start:dev": "NODE_ENV=dev node index.js",
-		"test": "mocha"
+		"test": "mocha --exit"
 	},
 	"author": "Beng Hui",
 	"license": "ISC",
@@ -22,6 +22,7 @@
 		"mysql2": "^2.3.3",
 		"sequelize": "^6.24.0",
 		"sinon": "^14.0.1",
+		"supertest": "^6.3.0",
 		"uuid": "^9.0.0",
 		"winston": "^3.8.2"
 	}
